--- a/todo.txt
+++ b/todo.txt
@@ -1,1 +1,30 @@
 vh_database sql语句中有>的问题解决。
+mysql节点管理
+在线文件管理
+虚拟主机转移
+一键安装程序
+空间登录日志查询
+用户访问控制(禁止访问,开启防盗链,.htaccess)
+
+空间信息查看(quota,已使用，连接，速度)
+模板切换(用户可以选择版本)
+特殊变量管理(如tomcat管理密码)
+web日志处理
+用户二级域名解析
+
+
+文件自动备份
+
+域名注册上游接口
+在线支付接口
+
+域名业务
+企业邮局业务
+vps业务
+
+
+特殊模板管理
+(如tomcat的，可以自动重启web服务器,vps可以安装操作系统，查询状态之类的)
+
+
+vps实现自动安装，自动配置IP地址。所有操作无需管理人员参与。
