--- a/todo.txt
+++ b/todo.txt
@@ -1,12 +1,12 @@
 vh_database sql语句中有>的问题解决。
+
 mysql节点管理
 在线文件管理
 虚拟主机转移
 一键安装程序
 空间登录日志查询
 用户访问控制(禁止访问,开启防盗链,.htaccess)
-
-空间信息查看(quota,已使用，连接，速度)
+空间信息查看(连接，速度)
 模板切换(用户可以选择版本)
 特殊变量管理(如tomcat管理密码)
 web日志处理
